// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#createCertificateAuthorityEntity should convert to entity 1`] = `
Object {
  "_class": Array [
    "Service",
  ],
  "_key": "projects/j1-gc-integration-dev-v2/locations/us-central1/certificateAuthorities/acmeName",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "accessUrls": Object {
          "caCertificateAccessUrl": "http://test-bucket-with-labels.storage.googleapis.com/f1cc34b5b7e8fa026582/ca.crt",
          "crlAccessUrl": "http://test-bucket-with-labels.storage.googleapis.com/f1cc34b5b7e8fa026582/crl.crl",
        },
        "caCertificateDescriptions": Array [
          Object {
            "authorityKeyId": Object {
              "keyId": "ec21738d89c6020cfab46e73b1a001d7fb24d34c",
            },
            "certFingerprint": Object {
              "sha256Hash": "d7de957b8c0903c662332fc8ec4966c5dc01b7426ed778dc389aaa545a37064a",
            },
            "configValues": Object {
              "caOptions": Object {
                "isCa": true,
              },
              "keyUsage": Object {
                "baseKeyUsage": Object {
                  "certSign": true,
                  "crlSign": true,
                },
              },
            },
            "subjectDescription": Object {
              "commonName": "acmeName",
              "hexSerialNumber": "008a51de1d92de213728c7733b74700f4a684513",
              "lifetime": "314496000s",
              "notAfterTime": "2031-03-27T14:44:07.900172684Z",
              "notBeforeTime": "2021-04-08T14:44:07.900172684Z",
              "subject": Object {
                "organization": "Acme",
              },
              "subjectAltName": Object {},
            },
            "subjectKeyId": Object {
              "keyId": "ec21738d89c6020cfab46e73b1a001d7fb24d34c",
            },
          },
        ],
        "config": Object {
          "reusableConfig": Object {},
          "subjectConfig": Object {
            "commonName": "acmeName",
            "subject": Object {
              "organization": "Acme",
            },
          },
        },
        "createTime": "2021-04-08T14:44:07.215539285Z",
        "issuingOptions": Object {
          "includeCaCertUrl": true,
          "includeCrlAccessUrl": true,
        },
        "keySpec": Object {
          "algorithm": "RSA_PKCS1_2048_SHA256",
        },
        "lifetime": "314496000s",
        "name": "projects/j1-gc-integration-dev-v2/locations/us-central1/certificateAuthorities/acmeName",
        "state": "ENABLED",
        "tier": "ENTERPRISE",
        "type": "SELF_SIGNED",
        "updateTime": "2021-04-08T14:44:09.263990183Z",
      },
    },
  ],
  "_type": "google_privateca_certificate_authority",
  "caCertificateAccessUrl": "http://test-bucket-with-labels.storage.googleapis.com/f1cc34b5b7e8fa026582/ca.crt",
  "category": Array [
    "security",
  ],
  "createdOn": 1617893047215,
  "crlAccessUrl": undefined,
  "deletedOn": undefined,
  "displayName": "projects/j1-gc-integration-dev-v2/locations/us-central1/certificateAuthorities/acmeName",
  "extendedKeyUsage.clientAuth": undefined,
  "extendedKeyUsage.codeSigning": undefined,
  "extendedKeyUsage.emailProtection": undefined,
  "extendedKeyUsage.ocspSigning": undefined,
  "extendedKeyUsage.serverAuth": undefined,
  "extendedKeyUsage.timeStamping": undefined,
  "function": Array [
    "certificate-management",
  ],
  "keyAlgorithm": "RSA_PKCS1_2048_SHA256",
  "keyUsage.certSign": undefined,
  "keyUsage.contentCommitment": undefined,
  "keyUsage.crlSign": undefined,
  "keyUsage.dataEncipherment": undefined,
  "keyUsage.decipherOnly": undefined,
  "keyUsage.digitalSignature": undefined,
  "keyUsage.encipherOnly": undefined,
  "keyUsage.keyAgreement": undefined,
  "keyUsage.keyEncipherment": undefined,
  "lifetime": "314496000s",
  "name": "projects/j1-gc-integration-dev-v2/locations/us-central1/certificateAuthorities/acmeName",
  "public": false,
  "state": "ENABLED",
  "subject": undefined,
  "subject.countryCode": undefined,
  "subject.locality": undefined,
  "subject.organization": "Acme",
  "subject.organizationalUnit": undefined,
  "subject.postalCode": undefined,
  "subject.province": undefined,
  "subject.streetAddress": undefined,
  "subjectAltName.dnsNames": undefined,
  "subjectAltName.emailAddresses": undefined,
  "subjectAltName.ipAddresses": undefined,
  "subjectAltName.uris": undefined,
  "tier": "ENTERPRISE",
  "type": "SELF_SIGNED",
  "updatedOn": 1617893049263,
  "webLink": "https://console.cloud.google.com/security/cas/manage/locations/us-central1/certificateAuthorities/acmeName/details?project=j1-gc-integration-dev-v2",
}
`;

exports[`#createCertificateEntity should convert to entity 1`] = `
Object {
  "_class": Array [
    "Certificate",
  ],
  "_key": "projects/711888229551/locations/us-central1/certificateAuthorities/Test-CA-Name/certificates/20210401-nkm-v03",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "certificateDescription": Object {
          "aiaIssuingCertificateUrls": Array [
            "http://privateca-content-605f9a85-0000-2ec7-9474-f403043ccfa8.storage.googleapis.com/f168e1beb72a7e72e8c5/ca.crt",
          ],
          "authorityKeyId": Object {
            "keyId": "f4c932216ac01039c8f3c952fab0c2f7db202315",
          },
          "certFingerprint": Object {
            "sha256Hash": "7aeb434082c0ea73d819c1e4fab7a3e31f027a9d4440f666af2e3ac38a26039b",
          },
          "configValues": Object {
            "caOptions": Object {
              "isCa": false,
            },
            "keyUsage": Object {
              "baseKeyUsage": Object {
                "digitalSignature": true,
                "keyEncipherment": true,
              },
            },
          },
          "crlDistributionPoints": Array [
            "http://privateca-content-605f9a85-0000-2ec7-9474-f403043ccfa8.storage.googleapis.com/f168e1beb72a7e72e8c5/crl.crl",
          ],
          "subjectDescription": Object {
            "hexSerialNumber": "ec41a22274884f34272ea3dabe37a42daffe41",
            "lifetime": "2592000s",
            "notAfterTime": "2021-05-01T19:17:48Z",
            "notBeforeTime": "2021-04-01T19:17:48Z",
            "subjectAltName": Object {
              "dnsNames": Array [
                "google.com",
              ],
            },
          },
          "subjectKeyId": Object {
            "keyId": "abb01889d84091201b6c09b3f4f6cf04d0a91c13",
          },
        },
        "config": Object {
          "reusableConfig": Object {
            "reusableConfigValues": Object {
              "caOptions": Object {
                "isCa": false,
              },
              "keyUsage": Object {
                "baseKeyUsage": Object {
                  "digitalSignature": true,
                  "keyEncipherment": true,
                },
                "extendedKeyUsage": Object {},
              },
            },
          },
          "subjectConfig": Object {
            "subjectAltName": Object {
              "dnsNames": Array [
                "google.com",
              ],
            },
          },
        },
        "createTime": "2021-04-01T19:17:48.319675789Z",
        "lifetime": "2592000s",
        "name": "projects/711888229551/locations/us-central1/certificateAuthorities/Test-CA-Name/certificates/20210401-nkm-v03",
        "updateTime": "2021-04-01T19:17:48.319675789Z",
      },
    },
  ],
  "_type": "google_privateca_certificate",
  "alternativeNames": Array [
    "google.com",
  ],
  "createdOn": 1617304668319,
  "displayName": "projects/711888229551/locations/us-central1/certificateAuthorities/Test-CA-Name/certificates/20210401-nkm-v03",
  "extendedKeyUsage.clientAuth": undefined,
  "extendedKeyUsage.codeSigning": undefined,
  "extendedKeyUsage.emailProtection": undefined,
  "extendedKeyUsage.ocspSigning": undefined,
  "extendedKeyUsage.serverAuth": undefined,
  "extendedKeyUsage.timeStamping": undefined,
  "hexSerial": "ec41a22274884f34272ea3dabe37a42daffe41",
  "issuer": "Test-CA-Name",
  "issuerCertificateAuthority": undefined,
  "keyAlgorithm": "RSA_PKCS1_2048_SHA256",
  "keyUsage.certSign": undefined,
  "keyUsage.contentCommitment": undefined,
  "keyUsage.crlSign": undefined,
  "keyUsage.dataEncipherment": undefined,
  "keyUsage.decipherOnly": undefined,
  "keyUsage.digitalSignature": undefined,
  "keyUsage.encipherOnly": undefined,
  "keyUsage.keyAgreement": undefined,
  "keyUsage.keyEncipherment": undefined,
  "lifetime": "2592000s",
  "name": "projects/711888229551/locations/us-central1/certificateAuthorities/Test-CA-Name/certificates/20210401-nkm-v03",
  "notAfterTime": 1619896668000,
  "notBeforeTime": 1617304668000,
  "subject": undefined,
  "subject.countryCode": undefined,
  "subject.locality": undefined,
  "subject.organization": undefined,
  "subject.organizationalUnit": undefined,
  "subject.postalCode": undefined,
  "subject.province": undefined,
  "subject.streetAddress": undefined,
  "subjectAltName.dnsNames": Array [
    "google.com",
  ],
  "subjectAltName.emailAddresses": undefined,
  "subjectAltName.ipAddresses": undefined,
  "subjectAltName.uris": undefined,
  "updatedOn": 1617304668319,
  "webLink": "https://console.cloud.google.com/security/cas/certificate/locations/us-central1/certificateAuthorities/Test-CA-Name/certificates/20210401-nkm-v03?project=j1-gc-integration-dev-v2",
}
`;
